app1/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: kasthurihostel.org
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: app1-client
                port:
                  number: 80
    - host: api.kasthurihostel.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app1-server
                port:
                  number: 3001
